Fix a bug in weather-api and add styles for scrollbar
The bug produced a wrong output on different timezones

--- a/src/style.css
+++ b/src/style.css
@@ -556,6 +556,37 @@ footer > div {
     position: relative;
 }
 
+/* Chrome scrollbar */
+::-webkit-scrollbar {
+    width: 8px;
+    height: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: hsl(0deg 0% 45%);
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(0deg 0% 35%);
+}
+
+::-webkit-scrollbar-thumb:active {
+    background-color: hsl(212, 100%, 50%);
+}
+
+::-webkit-scrollbar-track {
+    background-color: hsl(0deg 0% 78%);
+}
+
+:is(.hourly_items, .daily_items)::-webkit-scrollbar-track {
+    border-radius: 5px;
+}
+
+.hourly_items::-webkit-scrollbar-track {
+    background: transparent;
+}
+
 
 
 
